# helix

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  DEV.md  Makefile  README.md  SUBMISSION.md  hackathon_rules.md  pyproject.toml
backend/beacon/: config.py  pipeline.py  schemas.py
backend/beacon/agents/: claims_seeder.py  dispatcher.py  investigator.py  manager.py  model.py
backend/beacon/api/: main.py
backend/beacon/ingest/: __init__.py  tiktok.py  transcribe.py  web.py  youtube.py
backend/beacon/tools/: factchecker.py  ingestion.py  pubmed.py  who.py  who_data.py
backend/helix/: __init__.py  agent.py  prompts.py  schemas.py  tools.py
backend/helix/api/: main.py
docker/: .dockerignore  Dockerfile  cloudbuild.yaml  nginx.conf  supervisord.conf
frontend/: index.html  package-lock.json  vite.config.js
frontend/public/: demo.html
frontend/src/: App.jsx  index.css
frontend/src/api/: beacon.js  helix.js
frontend/src/components/: About.jsx  AgentLoader.jsx  CheckForm.jsx  CheckPage.jsx  ClaimReview.jsx  Footer.jsx  FormerReport.jsx  FormerReports.jsx  FormerReportsPage.jsx  Header.jsx  HelixDecoration.jsx  HomeSidebar.jsx  Landing.jsx  LinkPreview.jsx  Methodology.jsx  Results.jsx  SamplePrompts.jsx  ScrollExpandHero.jsx
frontend/src/data/: formerReports.js
frontend/src/hooks/: useLinkPreview.js
static/: app.js  index.html  styles.css
tests/: test_dispatcher.py  test_e2e.ipynb  test_schemas.py  test_tools.py
