[project]
name = "beacon"
version = "0.0.1"
description = "Passive on-device fact-checker for health misinformation"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=0.4.0",
    "litellm>=1.50.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "rapidfuzz>=3.9.0",
    "python-dotenv>=1.0.0",
    "trafilatura>=1.12.0",
    "youtube-transcript-api>=0.6.2",
    "yt-dlp>=2025.1.0",
    "transformers>=4.50.0",
    "torch>=2.4.0",
    "accelerate>=0.34.0",
    "librosa>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tests/*.ipynb"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
